--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astro-community/astro-embed-youtube": "^0.5.2",
     "@astrojs/netlify": "^5.2.0",
+    "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/svelte": "^5.3.0",
     "@iconify-json/fa6-brands": "^1.1.19",
     "@iconify-json/fa6-regular": "^1.1.19",
+    "@iconify-json/fa6-solid": "^1.1.19",
     "@rive-app/canvas": "^2.14.0",
     "@studio-freight/lenis": "^1.0.42",
     "astro": "^4.5.18",
+    "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.19",
@@ -27,6 +29,7 @@
     "gsap": "^3.12.5",
     "mdast-util-to-string": "^4.0.0",
     "motion": "^10.17.0",
+    "reading-time": "^1.5.0",
     "solid-js": "^1.8.16",
     "svelte": "^4.2.12"
   },
