--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "sanitize-html": "^2.13.0",
     "unocss": "^0.59.0"
   },
-  "overrides": {
-    "astro-icon": {
-      "@iconify/tools": "^4.0.0"
-    }
+   "resolutions": {
+     "cheerio": "1.0.0-rc.12"
   }
 }
